# legion

./: .gitignore  README.md  SECURITY.md  mkdocs.yml  requirements.txt  test
docs/: index.md
docs/gui/: overview.md
docs/node/: api.md  core.md  messaging.md  network.md  overview.md
docs/relay/: overview.md
docs/stylesheets/: extra.css
legion-gui/: config.py  pyproject.toml
legion-gui/app/: bridge.py  main.py
legion-gui/ui/: app.js  index.html  style.css
legion-node/: config.py  main.py  pyproject.toml
legion-node/api/: server.py
legion-node/core/: crypto.py  identity.py  protocol.py  storage.py
legion-node/data/: schema.sql
legion-node/messaging/: delivery.py  files.py  groups.py  private.py
legion-node/network/: client.py  node.py  relay.py  tor.py
legion-node/tests/: test_api.py  test_client.py  test_config.py  test_crypto.py  test_delivery.py  test_groups.py  test_identity.py  test_node.py  test_private.py  test_protocol.py  test_relay.py  test_storage.py  test_tor.py
legion-relay/: config.py  main.py  pyproject.toml
legion-relay/data/: schema.sql
legion-relay/relay/: cleanup.py  delivery.py  server.py  storage.py  tor.py
legion-relay/tests/: test_delivery.py  test_server.py  test_storage.py
site/: 404.html  index.html
site/gui/overview/: index.html
site/node/api/: index.html
site/node/core/: index.html
site/node/messaging/: index.html
site/node/network/: index.html
site/node/overview/: index.html
site/relay/overview/: index.html
site/search/: search_index.json
